--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "Discorify-relay",
+  "name": "discordify-relay",
   "version": "1.0.0",
   "dependencies": {
     "axios": "^1.6.0",
-    "https-proxy-agent": "^7.0.2"
+    "https-proxy-agent": "^7.0.2",
+    "socks-proxy-agent": "^8.0.2"
   }
 }
